--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "require": {
         "flux-se/payum-stripe": "^2.0",
         "payum/payum-bundle": "^2.4",
-        "symfony/http-kernel": "^4.4|^5.4|^6.0",
-        "symfony/dependency-injection": "^4.4|^5.4|^6.0",
-        "symfony/config": "^4.4|^5.4|^6.0"
+        "symfony/http-kernel": "@stable",
+        "symfony/dependency-injection": "@stable",
+        "symfony/config": "@stable"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8|^9",
+        "phpunit/phpunit": "@stable",
         "symplify/easy-coding-standard": "^11",
         "php-http/guzzle6-adapter": "^2.0",
         "phpstan/phpstan": "^1",
